fix: EVA-4949 tab slider, slider item paragraph fix on mobile

--- a/src/components/LayoutContainer/LayoutContainer.css
+++ b/src/components/LayoutContainer/LayoutContainer.css
@@ -10,6 +10,7 @@
 @container (max-width:768px) {
     /*carousel*/
     .item-text-area {
+        display: -webkit-box;
         font-size: 20px !important;
     }
 }
